--- a/index.html
+++ b/index.html
@@ -7,38 +7,55 @@
     <title>Document</title>
 </head>
 <!--Navbar-->
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-dark">
     <span class="navbar-brand mb-0 h1">Navbar</span>
   </nav>
   <!--End Navbar-->
 <body>
-<div class="row">
-    <div class="row col-lg-4 p-3 mb-2 bg-light text-dark">
-        <h4 class="mx-auto col-12">Search for a City</h4>
-        <br>
-        <div>
-            <form class="form-inline my-2 my-lg-0 mx-auto">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+    <div class="row">
+        <div class="row col-lg-4 p-3 mb-2 bg-light text-dark">
+            <h4 class="mx-auto col-12">Search for a City</h4>
+            <br>
+            <div>
+                <form class="form-inline my-2 my-lg-0 mx-auto">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="row  col-lg-8 p-3 mb-2 bg-secondary text-white">
+            <div class = "col-lg-12">
+                <h3></h3>
+                <p class="col-12">Temperature:</p>
+                <br>
+                <p class="col-12">Humidity:</p>
+                <br>
+                <p class="col-12">Wind Speed:</p>
+                <br>
+                <p class="col-12">UV Index:</p>
+            </div>
+
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3">
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
+
         </div>
     </div>
-    <div class="row col-lg-8 p-3 mb-2 bg-danger text-white">
-        <h3></h3>
-        <p class="col-12">Temperature:</p>
-        <br>
-        <p class="col-12">Humidity:</p>
-        <br>
-        <p class="col-12">Wind Speed:</p>
-        <br>
-        <p class="col-12">UV Index:</p>
-
-    </div>
-</div>
  
-<!--Bootstrap jquery code-->
+
+  <!--Bootstrap jquery code-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
