--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
             <br>
             <div>
                 <form class="form-inline my-2 my-lg-0 mx-auto">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Enter City Name" aria-label="Search" id="searchInput">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchBtn">Search</button>
                 </form>
             </div>
+            <!--New buttons go here-->
+            <div id="newBtns">
+
+            </div>
+            <!--End Buttons-->
         </div>
 
         <div class="row  col-lg-8 p-3 mb-2 bg-secondary text-white">
@@ -36,16 +41,16 @@
                 <p class="col-12">UV Index:</p>
             </div>
 
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3">
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day1">
                 <br>
                 <br>
                 <br>
                 <br>
             </div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day2"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day3"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day4"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day5"></div>
 
         </div>
     </div>
