--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Weather Generator App</title>
 </head>
 <!--Navbar-->
 <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+    <span class="navbar-brand mb-0 h1">Welcome to the Weather Generator!</span>
   </nav>
   <!--End Navbar-->
 <body>
@@ -32,13 +32,13 @@
         <div class="row  col-lg-8 p-3 mb-2 bg-secondary text-white">
             <div class = "col-lg-12">
                 <h3></h3>
-                <p class="col-12">Temperature:</p>
+                <p class="col-12" id="temp">Temperature:</p>
                 <br>
-                <p class="col-12">Humidity:</p>
+                <p class="col-12" id="humidity">Humidity:</p>
                 <br>
-                <p class="col-12">Wind Speed:</p>
+                <p class="col-12" id="wind">Wind Speed:</p>
                 <br>
-                <p class="col-12">UV Index:</p>
+                <p class="col-12" id="uvIndex">UV Index:</p>
             </div>
 
             <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day1">
