--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
         <div class="row  col-lg-8 p-3 mb-2 bg-secondary text-white">
             <div class = "col-lg-12">
-                <h3></h3>
+                <!--City goes here-->
+                <h3 id="cityHeader"></h3> <h4 id="dateHeader"></h4>
+                <br>
+                <br>
                 <p class="col-12" id="temp">Temperature:</p>
                 <br>
                 <p class="col-12" id="humidity">Humidity:</p>
@@ -44,13 +47,23 @@
             <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day1">
                 <br>
                 <br>
+            </div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day2">
                 <br>
                 <br>
             </div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day2"></div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day3"></div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day4"></div>
-            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day5"></div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day3">
+                <br>
+                <br>
+            </div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day4">
+                <br>
+                <br>
+            </div>
+            <div class="col-lg-2 border border-dark bg-info text-white rounded m-3" id="day5">
+                <br>
+                <br>
+            </div>
 
         </div>
     </div>
@@ -61,6 +74,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
 <script src="./script.js"></script>
 </body>
 </html>
